2008-08-27  Paolo Bonzini  <bonzini@gnu.org>

	* sed/execute.c (closedown): Close the input file!

2008-08-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Add gl_DISABLE_THREADS.

2008-08-20  Ralf Wildenhues  <ralf.wildenhues@gmx.de

	* doc/sed-in.texi: Drop leading whitespace where appropriate,
	do not use TABs.
	* doc/sed.texi: Regnerate.

2008-08-19  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c: Do not include strverscmp.c.

2008-07-21  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Remove northpark.edu address for sed FAQ.
	* doc/sed.texi: Regenerate.

2008-07-10  Paolo Bonzini  <bonzini@gnu.org>

        * doc/sed-in.texi: Make the description of ^ and $ more precise.
        * doc/sed.texi: Regenerate.

2008-06-04  Vladimir Marek  <vladimir.marek@sun.com>

	* basicdefs.h: Don't hardcode usage of prototypes on SunStudio.

2008-05-15  Paolo Bonzini  <bonzini@gnu.org>

	* autoboot.conf: Update for newer gnulib.

2008-05-15  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Define bool, true, false.  Reported by
	Jason Stover.  Adjust for gnulib changes.
	* bootstrap.sh: Regenerate.

2008-04-24  Paul Eggert  <eggert@twinsun.com>

	* sed/compile.c (match_slash): Treat 's&foo&\&&' compatibly with
	traditional 'sed'.
	* testsuite/bsd.sh: Add test case for this.
	* testsuite/bsd.good: Add test case output.

2008-04-24  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c (setup_replacement): Fix bug with \& in POSIX mode.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/execute.c (open_next_file, get_backup_file_name): Avoid
	warnings from gcc.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/compile.c (snarf_char_class): Reverse order of conjuncts
	so that "delim" is not used uninitialized.

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/utils.c (panic): Remove declaration of unused local, "fd".

2008-01-16  Jim Meyering  <meyering@redhat.com>

	* sed/execute.c (open_next_file, get_backup_file_name): Avoid