@@ -1,28 +1,24 @@
 acl-internal.h
-acl.c
 acl.h
 acl_entries.c
 alloca.c
 alloca.h
 alloca.in.h
-alloca_.h
-asnprintf.c
 config.charset
 copy-acl.c
+errno.h
+errno.in.h
 error.c
 error.h
 exitfail.c
 exitfail.h
 file-has-acl.c
-float+.h
-float_.h
 getdelim.c
 getline.c
 getopt.c
 getopt.h
 getopt.in.h
 getopt1.c
-getopt_.h
 getopt_int.h
 gettext.h
 gettimeofday.c
@@ -38,10 +34,6 @@ mkstemp.c
 obstack.c
 obstack.h
 pathmax.h
-printf-args.c
-printf-args.h
-printf-parse.c
-printf-parse.h
 quote.c
 quote.h
 quotearg.c
@@ -58,21 +50,15 @@ regex_internal.c
 regex_internal.h
 regexec.c
 set-mode-acl.c
-size_max.h
-snprintf.c
 stat-macros.h
 stdbool.h
 stdbool.in.h
-stdbool_.h
 stdint.h
 stdint.in.h
-stdint_.h
 stdio.h
 stdio.in.h
-stdio_.h
 stdlib.h
 stdlib.in.h
-stdlib_.h
 strerror.c
 string.h
 string.in.h
@@ -80,26 +66,18 @@ strverscmp.c
 sys
 sys_stat.h
 sys_stat.in.h
-sys_stat_.h
 sys_time.h
 sys_time.in.h
-sys_time_.h
 tempname.c
 tempname.h
 unistd.h
 unistd.in.h
-unistd_.h
 unlocked-io.h
-vasnprintf.c
-vasnprintf.h
 verify.h
 wchar.h
 wchar.in.h
-wchar_.h
 wctype.h
 wctype.in.h
-wctype_.h
 xalloc-die.c
 xalloc.h
 xmalloc.c
-xsize.h
