@@ -1,12 +1,10 @@
-absolute-header.m4
 acl.m4
 alloca.m4
 codeset.m4
-eoverflow.m4
+errno_h.m4
 error.m4
 exitfail.m4
 extensions.m4
-float_h.m4
 getdelim.m4
 getline.m4
 getopt.m4
@@ -26,7 +24,6 @@ intl.m4
 intldir.m4
 intlmacosx.m4
 intmax.m4
-intmax_t.m4
 inttypes-h.m4
 inttypes-pri.m4
 inttypes_h.m4
@@ -49,7 +46,6 @@ nls.m4
 pathmax.m4
 po.m4
 printf-posix.m4
-printf.m4
 progtest.m4
 quote.m4
 quotearg.m4
@@ -57,7 +53,6 @@ realloc.m4
 regex.m4
 signed.m4
 size_max.m4
-snprintf.m4
 ssize_t.m4
 stdbool.m4
 stdint.m4
@@ -75,7 +70,6 @@ uintmax_t.m4
 ulonglong.m4
 unistd_h.m4
 unlocked-io.m4
-vasnprintf.m4
 visibility.m4
 wchar.m4
 wchar_t.m4
