@@ -35,7 +35,9 @@ extern int errno;
 # include <unistd.h>
 #endif
 
+#ifndef BOOTSTRAP
 #include "acl.h"
+#endif
 
 #ifdef __GNUC__
 # if __GNUC__ > 2 || (__GNUC__ == 2 && __GNUC_MINOR__-0 >= 7)
